# neural-network

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  activation.cpp  dataset.cpp  dataset.h  encoder.h  keras_vs_cpp.html  keras_vs_cpp.ipynb  loader.cpp  loader.h  main  main.cpp  matrix.h  neural_net.cpp  neural_net.h  pytorch-vs-cpp.html  pytorch-vs-cpp.ipynb  run.sh  tests.h
include/: activation.h  dataset.h  matrix.h  neural_net.h  tests.h  zip.h
jupter_notebooks/: keras_vs_cpp.ipynb  pytorch-vs-cpp.ipynb  run.py
src/: activation.cpp  encoder.cpp  loader.cpp  neural_net.cpp
test/: CMakeLists.txt  test.cpp
